# Mailing

./: .env.example  ClientName_fixture.json  Message_fixture.json  README.md  Task_fixture.json  pyproject.toml  установка Django
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_message_options_task_name_and_more.py  0003_alter_clientname_unsubscribe_and_more.py  0004_alter_clientname_unsubscribe_and_more.py  0005_alter_emailforsend_token.py  0006_alter_emailforsend_token_alter_message_text_mail.py  0007_alter_emailforsend_token.py
mailing/templates/: menu.html
mailing/templates/mailing/: base.html
mailing/templates/mailing/client/: clientname_confirm_delete.html  clientname_detail.html  clientname_form.html  clientname_list.html
mailing/templates/mailing/message/: message_confirm_delete.html  message_form.html  message_list.html
mailing/templates/mailing/tasks/: task_confirm_delete.html  task_form.html  task_list.html
mailing/views/: __init__.py  client_name_views.py  message_views.py  task_views.py
static/: path_to.css
static/django_ckeditor_5/: admin_dark_mode_fix.css
templates/: base.html
