[tool.poetry]
name = "mailing"
version = "0.1.0"
description = ""
authors = ["Serg Kuchukov Office <kuchukov.sergey@gmail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
python-dotenv = "^1.0.1"
django-ckeditor-5 = "^0.2.15"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

